@@ -3,6 +3,7 @@
   - Improvements to =o/O=
   - Bind =org-beginning-to-line= to =0=. Leave =^= mapped to =evil-first-non-blank=.
   - Improve interaction between evil and =org-special-ctrl-a/e=.
+  - Deprecate evil-org-recompute clocks, because org-resolve-clocks already does this.
 * Version 0.7
   - A hook is no longer created automatically. The following line of code is from now on required in a user config:
   #+BEGIN_SRC emacs-lisp
